<resources>
    <string name="app_name">FreeSurgut</string>
    <string name="title_home">Журнал</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Профиль</string>
    <string name="title_achievements">Достижения</string>
    <string name="achievement_theBestWeek">Лучший недели</string>
    <string name="title_stats">Статистика</string>
    <string name="title_sent">отправлено</string>
    <string name="title_accepted">принято</string>
    <string name="title_declined">отклонено</string>
    <string name="title_processed">обрабатывается</string>
</resources>