<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageButton4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/panda_img"
                android:padding="15dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <TextView android:id="@+id/textView_username"
                    style="@style/TextHeader1"
                    android:layout_height="35dp"
                    android:layout_width="wrap_content"
                    android:text="NickName"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                </TextView>
                <TextView android:id="@+id/textView_firstName"
                    style="@style/TextHeader2"
                    android:layout_height="30dp"
                    android:layout_width="wrap_content"
                    android:text="Имя"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                style="@style/TextHeader1"
                android:text="@string/title_achievements"
                android:textAlignment="center"
                android:layout_marginBottom="20dp">
            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/achievement_icn"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/textView_Achievement1"
                    style="@style/TextHeader2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/achievement_theBestWeek"
                    android:layout_gravity="center">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/achievement_icn"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/textView_Achievement2"
                    style="@style/TextHeader2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/achievement_theBestWeek">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/achievement_icn"
                    android:layout_marginEnd="20dp"/>
                <TextView
                    android:id="@+id/textView_Achievement4"
                    style="@style/TextHeader2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/achievement_theBestWeek">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                style="@style/TextHeader1"
                android:text="@string/title_stats"
                android:textAlignment="center"
                android:layout_marginBottom="20dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/TextHeader2"
                android:text="@string/title_sent">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/TextHeader2"
                android:text="@string/title_accepted">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/TextHeader2"
                android:text="@string/title_declined">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/TextHeader2"
                android:text="@string/title_processed">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>